# qr_udc

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  qr_generator.py  requirements.txt  setup.py
