[project]
name = "qr_udc"
version = "1.0.0"
description = "Generador de códigos QR para la UDC"
authors = [
    { name = "Universidade da Coruña" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "qrcode[pil]",
    "pillow",
    "python-multipart",
    "python-dotenv",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
qr-udc-serve = "main:run_server" 